  e - TRQ-3104. Add millisecond precision to the Torque log file (backported from 5.1.1)
  e - TRQ-2881. Add node health check error messages to a node's notes and therefore pbsnodes
      output.
  e - TRQ-3098. Add the ability to set a parameter exit_code_canceled_job to force all
      canceled jobs to have the same exit code regardless of the state they were in
      when they were canceled.
  b - TRQ-3166. Add another safety check before killing stray jobs. (backported from 5.1.1)


5.0.2
  b - TRQ-3029. Make it so that pbs_server can't have active threads when the main
      thread exits.
  b - TRQ-3012. Fix memory leaks that happen each time a job is run.
  b - TRQ-2966. Improved job rerun speed which had been significantly slowed down
      starting in 4.2.6. Also, pbs_mom now correctly accounts for job resources when
      user jobs call setsid more than once.
  c - TRQ-2987. Fix a crash around job exits due to incorrect error code handling.
  b - TRQ-2841. Fix some ways that max_user_queuable can become incorrect
  b - TRQ-2947. Fix a race condition on deleting jobs which are failing to start.
  c - TRQ-3068. Fix a race condition where a job may be deleted but have it's pointer
      may still be in the alljobs container. (backported from 5.1.1)
  b - TRQ-2332. Fix a job dependency problem when the failover server comes up. This
      only affects users running high availability. (backported from 5.1.1)
  b - TRQ-2833. Set CUDA_VISIBLE_DEVICES to only the indices for this host when
      it will be set. (backported from 5.1.1)
  b - TRQ-3097. Fixed a problem where failed job submissions would count against
      the max_user_queuable count and could not be cleared until pbs_server
      was restarted.
  b - TRQ-3087. Fixed a problem where completed jobs were counted against max_user_queuable
      when restarting pbs_server. Also if the max_user_queuable was set on a 
      queue and the number of queued jobs and completed jobs were over the 