@@ -8,7 +8,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   e - TRQ-3098. Add the ability to set a parameter exit_code_canceled_job to force all
       canceled jobs to have the same exit code regardless of the state they were in
       when they were canceled.
-  b - TRQ-3166. Add another safety check before killing stray jobs. (backported from 5.1.1)
+  e - TRQ-2836. Make node health check run on sister nodes when configured for job
+      start and job end as well. (backported from 5.1.2)
 
 
 5.0.2
